--- a/stilo.css
+++ b/stilo.css
@@ -19,6 +19,7 @@ main{
     
 }
 header.topo{
+    width: 99vw;
     background-image: url(imagens/ftfundo.jpg);
     text-align: center;
     background-image: linear-gradient(to bottom right, #3A305C, #AE4A9C 70%);
@@ -43,7 +44,7 @@ id#video{/*Configurar responsividade*/
     margin: auto;
 }
 id#video > iframe{
-    width: 100vw;
+    width: 99vw;
     max-width: 620px;
     
 }
@@ -71,7 +72,7 @@ img.garantia{
 section.ben {
     color: #39325E;
     font-family: 'Poppins', sans-serif; 
-    height: 500px;  
+    min-height: 500px;    
     text-align: center;
     padding-top: 15px;
     
@@ -184,6 +185,7 @@ section#sec4 {
 
 div.sec4{
     max-width: 1120px;
+    width: 80vw;
     margin: auto;   
 }
 section#sec4 h2{
@@ -212,18 +214,21 @@ section#sec4 span{
 }
 
 #fotos2{   
+    max-width: 98vw;
     text-align: center;
     height: auto;
-    max-width: 100%;   
+      
+    background-color: black; 
 }
+#fotos2 > img{
+    max-width: 80vw;
 
+}
 section#sec5 {
     text-align: center;
     padding: auto;
     background-image: linear-gradient(to bottom right, #24203C,#38315D); 
     padding: 60px 0px; 
-}
-section#sec5 > div.sec5{
 }
 section#sec5 > div > h2 {
     text-align: center;
@@ -232,12 +237,84 @@ section#sec5 > div > h2 {
     font-size: 40px;
     font-weight: 700;
     padding: 10px 0px;
+    max-width: 98vw;
 }
 section#sec5 > div > h2 > span{
     color: #F169D7;
 }
 section#sec5 > div > img{
     padding: 60px;
+}
+
+section#sec6 > h1 {
+    padding-top: 40px;
+    text-align: center;
+    font-size: 38px;
+    line-height: 1.33em;     color: #39325E;
+    font-family: "Poppins", Sans-serif;
+    font-size: 45px;
+    font-weight: 600;
+    text-transform: uppercase;  
+}
+section#sec6 > p{
+    max-width: 97vw;
+    text-align: center;
+    padding: auto;
+    padding-top: 30px;
+    color: #000000EB;
+    font-family: "Roboto", Sans-serif;
+    font-size: 23px;
+    font-weight: 500;
+    text-transform: uppercase; 
+    line-height: 1;
+}
+
+section#sec6 img{
+    max-width: 78vw;
+    padding-top: 20px;
+}
+section#sec6 > div{  
+    text-align: center;
+    padding: auto;
+}
+
+section#sec7{
+    display: flex;
+    max-width: 96vw;
+    padding: 40px 0px;
+    justify-content: space-around;
+    text-align: center;
+    max-width: 97vw;
+}
+
+section#sec7  h2{
+
+    color: #39325E;
+    font-family: "Roboto", Sans-serif;
+    font-size: 25px;
+    font-weight: 600;
+    line-height: 1;
+    padding-top: 20px;   
+    text-align: center;
+}
+section#sec7  p{
+    color: #7A7A7A;
+    font-size: 19px;
+    text-align: center;
+    padding: 20px 0px;  
+}
+section#sec7 img{
+    border-radius: 50%;
+    padding: auto;
+    
+}
+section#sec7 > div {
+    max-width: 400px;
+}
+
+section#sec8{
+    display: flex;
+    justify-content: space-around;
 }
 
 
@@ -265,16 +342,20 @@ section#sec5 > div > img{
         font-weight:700;
         text-decoration: none;
         margin: auto;  
+
+        width: 80vw;
+    }
+    div.sec3{
+       
     }
     div.imgsec3{
         background-color: white;
-        width: 96vw;
-    
+        width: 80vw;   
         box-shadow: 0px 0px 10px 0px rgb(0 0 0 / 50%);
         border-radius: 30px;
         margin: 10px ;
         padding: 15px;
-        height: 507px;
+        height: auto;
     }
     div.imgsec3 > p{
 
@@ -289,6 +370,15 @@ section#sec5 > div > img{
     section#sec4 {
         width: 96%;
     }
-   
+
+    section#sec7{
+        display: block;
+        max-width: 98vw;
+        text-align: center;
+    }
+   section#sec7 > div{
+    max-width: 97vw;
+
+   }
 }
    
