--- a/stilo.css
+++ b/stilo.css
@@ -23,7 +23,8 @@ header.topo{
     width: 99vw;
     background-image: url(imagens/ftfundo.jpg);
     text-align: center;
-    background-image: linear-gradient(to bottom right, #3A305C, #AE4A9C 70%);
+    /*background-image: linear-gradient(to bottom right, #3A305C, #AE4A9C 70%);*/
+    background-color: red;
     width: 99vw;
     height: auto;
     padding-bottom: 20px;
@@ -254,7 +255,7 @@ section#sec5 > div > h2 > span{
     color: #F169D7;
 }
 section#sec5 > div > img{
-    padding: 60px;
+    padding: 60px 0px;
     max-width: 80%;
 }
 
