--- a/stilo.css
+++ b/stilo.css
@@ -21,9 +21,9 @@ main{
 } 
 header.topo{
     width: 99vw;
-    background-color: green;
+  
     text-align: center;
-    /*background-image: linear-gradient(to bottom right, #3A305C, #AE4A9C 70%);*/
+    background-image: linear-gradient(to bottom right, #3A305C, #AE4A9C 70%);
     width: 99vw;
     height: auto;
     padding-bottom: 20px;
