--- a/stilo.css
+++ b/stilo.css
@@ -387,7 +387,7 @@ section#sec9 p{
     font-family: "Poppins", Sans-serif;
     font-weight: 300;
     line-height: 1.3em;
-    ext-align: center;
+    text-align: center;
     font-size: 19px;
 }
 
@@ -504,6 +504,8 @@ a.btcompraverde > p{
     box-shadow: 3px 5px 5px rgba(0, 0, 0, 0.727);
     background-color:rgb(22, 125, 22); margin: auto;
     max-width: 60%;
+    color: white;
+    
     
 }
 a.btcompraverde{
@@ -621,9 +623,7 @@ footer > div.fot{
 
         width: 80vw;
     }
-    div.sec3{
-       
-    }
+
     div.imgsec3{
         background-color: white;
         width: 80vw;   
