--- a/stilo.css
+++ b/stilo.css
@@ -37,6 +37,7 @@ section.txttopo{
     margin: auto;
     max-width: 75vw;
     padding: 20px 3px;
+    text-transform: uppercase;
 }
 
 div#video > iframe{
@@ -80,7 +81,7 @@ div.divben img{
 }
 div#benef{
     display: flex;
-    align-items: center;
+    /*align-items: center;*/
     justify-content: space-between;
     margin: 0px 93px;
     
@@ -120,6 +121,7 @@ section#fotos1{
     background-image: url(imagens/ftfundo2.jpg);
     background-image: linear-gradient(to bottom right, #24203C,#38315D);
     padding: 30px 0px;
+    text-transform: uppercase;
 }
 section#fotos1 > h2{
     max-width: 1120px;
