--- a/stilo.css
+++ b/stilo.css
@@ -16,7 +16,7 @@ body {
   max-width: 100vw;
 }
 main {
-  max-width: 100vw;
+  width: 100vw;
 }
 header.topo {
   width: 100vw;
@@ -594,7 +594,7 @@ div.duvidas p {
 footer {
   background-color: #39325e;
   padding: 20px 2px;
-  width: 99vw;
+  /* width: 99vw; */
   padding-bottom: 20px;
 }
 footer > div > p {
@@ -611,7 +611,17 @@ footer > div.fot {
   margin: auto;
 }
 
-@media screen and (max-width: 950px) {
+
+@media screen and (max-width: 1065px) {
+
+  section#sec8 {
+    flex-wrap: wrap;
+  }
+}
+
+
+
+@media screen and (max-width: 768px) {
   
   section.txttopo h1 {
     font-size: 28px;
@@ -718,9 +728,14 @@ section#sec5 > div > h2 {
   section#sec10 {
     margin: 1px;
   }
-  section#sec10 > div.sec10r {
+  section#sec10 > div.sec10 { 
+    /* apaguei o "r" que tava grudado em sec 10(ultimo) */
     width: 93vw;
   }
+section#sec10 > div.sec10r > h2 {
+  font-size: 24px;
+}
+
   #sec11 {
     width: 99vw;
   }
